--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+numpy<2.0
 Flask==2.2.5
 Flask-RESTful==0.3.9
 torch==1.13.1
@@ -5,3 +6,6 @@ torchvision==0.14.1
 celery[redis]==5.2.7
 redis==4.5.5
 pillow==9.5.0
+opencv-python==4.7.0.72
+ultralytics==8.2.93
+pandas==2.1.0
