--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,4 +8,7 @@ redis==4.5.5
 pillow==9.5.0
 opencv-python==4.7.0.72
 ultralytics==8.2.93
-pandas==2.1.0
+pandas==2.1.1
+pytest==8.3.3
+pytest-flask==1.3.0
+pytest-celery==1.1.1
